--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,21 @@
-# Sistema
-*.log
-*.pot
-*.pyc
-*.pyo
-*.coverage
-*.cover
-*.mo
-*.py,cover
-*.sqlite3
-
-# Configurações do editor
-.idea/
-.vscode/
-*.sublime-workspace
-*.sublime-project
-
-# Diretórios do sistema operacional
-.DS_Store
-Thumbs.db
-
-# Virtualenv
+Ambiente Virtual
 venv/
-ENV/
 env/
 
-# Arquivos de migração
-**/migrations/*
-
-# Diretório estático gerado automaticamente
-staticfiles/
-
-# Diretório media (arquivos carregados pelo usuário)
-media/
-
-# Arquivos de cache
-__pycache__/
+Arquivos Python compilados
+pycache/
 *.py[cod]
-*.so
 
-# Configuração local (se houver)
-local_settings.py
+Arquivos de log
+*.log
 
-# Arquivos do pytest
-.pytest_cache/
+Configurações de banco de dados locais
+db.sqlite3
+*.sqlite3
 
-# Arquivos criados pelo sistema
-*.swp
-*.swo
+Arquivos de configurações do IDE/editor
+.vscode/
+.idea/
+
+Arquivos de mídia e uploads (se você estiver armazenando no projeto)
+media/
